Rework fitConnect config